# Arc-Hook

./: .env.deployment.example  .gitignore  README.md  foundry.toml
broadcast/BridgeToLasna.s.sol/11155111/: run-1773161076986.json
broadcast/DeployReactive.s.sol/5318007/: run-1773161303417.json  run-1773161414565.json
broadcast/DeployUnichain.s.sol/1301/: run-latest.json
kzg-prover/: Cargo.toml
kzg-prover/src/: chain.rs  db.rs  listener.rs  main.rs  server.rs
kzg-prover/src/kzg/: commit.rs  encoding.rs  field.rs  mod.rs  proof.rs  srs.rs
script/: BridgeToLasna.s.sol  Deploy.s.sol  DeployReactive.s.sol  DeployUnichain.s.sol
src/: KZGWhitelistHook.sol  ProverTrigger.sol  WhitelistRegistry.sol  WhitelistVerifier.sol
src/interfaces/: IWhitelistVerifier.sol
src/reactive/: KZGWhitelistRSC.sol
test/: KZGWhitelistTest.t.sol
