[package]
name = "kzg-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
alloy = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
blst = "0.3"
rayon = "1.7"
dotenv = "0.15"
anyhow = "1.0"
hex = "0.4"
tiny-keccak = { version = "2.0", features = ["keccak"] }
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
actix-web = "4"
actix-cors = "0.7"
